# chess-c

./: CMakeLists.txt  README.md
src/: board.c  board.h  main.c
